Добавил bottom navigation но еще не настроил до конца

--- a/presentation/src/main/res/layout/fragment_main.xml
+++ b/presentation/src/main/res/layout/fragment_main.xml
@@ -45,8 +45,7 @@
         app:layout_constraintTop_toBottomOf="@id/edtv_search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layoutManagerOrientation="horizontal"/>
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />
 
     <!-- Заголовок "Вакансии для вас" -->
     <TextView
