Убрал белый фон у нижней навигации

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,11 +25,9 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/black"
+        style="@style/Widget.MaterialComponents.BottomNavigationView.PrimarySurface"
         app:menu="@menu/bottom_nav_menu"
         app:itemTextColor="@color/bottom_nav_text_color"
-        app:itemBackground="@color/black"
-        app:itemPaddingBottom="28dp"
-        app:itemRippleColor="@color/black"
         app:labelVisibilityMode="labeled"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
