--- a/presentation/src/main/res/layout/item_vacancy_card.xml
+++ b/presentation/src/main/res/layout/item_vacancy_card.xml
@@ -48,7 +48,7 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
-            android:id="@+id/tv_city"
+            android:id="@+id/tv_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
@@ -70,7 +70,7 @@
             android:textColor="@color/white"
             android:textSize="14sp"
             android:fontFamily="@font/sf_pro_display_regular"
-            app:layout_constraintTop_toBottomOf="@id/tv_city"
+            app:layout_constraintTop_toBottomOf="@id/tv_location"
             app:layout_constraintStart_toStartOf="parent"/>
         
         <ImageView
