--- a/presentation/src/main/res/layout/fragment_favorites.xml
+++ b/presentation/src/main/res/layout/fragment_favorites.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
-    tools:context=".FavoritesFragment">
+    tools:context=".ui.FavoritesFragment">
 
     <TextView
         android:id="@+id/tv_favorites"
