--- a/presentation/src/main/res/layout/fragment_log_in.xml
+++ b/presentation/src/main/res/layout/fragment_log_in.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/black"
-    tools:context=".LogInFragment">
+    tools:context=".ui.LogInFragment">
 
     <TextView
         android:id="@+id/tv_log_in"
