--- a/presentation/src/main/res/layout/item_vacancy_card.xml
+++ b/presentation/src/main/res/layout/item_vacancy_card.xml
@@ -48,6 +48,19 @@
             app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
+            android:id="@+id/tv_salary"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="10dp"
+            android:layout_marginStart="16dp"
+            android:text="100 $"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            android:fontFamily="@font/sf_pro_display_medium"
+            app:layout_constraintTop_toBottomOf="@id/tv_title"
+            app:layout_constraintStart_toStartOf="parent"/>
+
+        <TextView
             android:id="@+id/tv_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -57,7 +70,7 @@
             android:textColor="@color/white"
             android:textSize="14sp"
             android:fontFamily="@font/sf_pro_display_regular"
-            app:layout_constraintTop_toBottomOf="@id/tv_title"
+            app:layout_constraintTop_toBottomOf="@id/tv_salary"
             app:layout_constraintStart_toStartOf="parent"/>
 
         <TextView
